fixed text alignment

--- a/www/css/physioBuddy.css
+++ b/www/css/physioBuddy.css
@@ -58,14 +58,8 @@
 .calibrate-content-pictures{
 		background-color: #F2F2F2;
 		background-color-opacity: 20%;
-<<<<<<< HEAD
-    margin-left: none !important;
-    margin-right: none!important;
-=======
     margin-left: -13%;
     margin-right: -13%;
->>>>>>> c03964e188ecc6404844b6df7b4e2c49c201915b
-    padding: 10%;
 }
 
 .calibrate-content-button{
